# oop-lab07

./: CMakeLists.txt  main.cpp
include/: npc_system.hpp
src/: npc_system.cpp
tests/: test.cpp
